# DurationModulatedDynamics

./: .gitignore  README.md  pyproject.toml  requirements.txt
DurationModulatedDynamics.egg-info/: top_level.txt
dynamical_systems_analyses/SLDS/: MASTER_autorestart.py  SLDS.py  config.py  cross_speed_SLDS.py  cross_speed_SLDS_simple.py  decoding_SLDS.py  decoding_baselines.py  dsup_ratio_SLDS.py  entropy_SLDS.py  figure_generation_MASTER.py  inference_SLDS.py  inference_baseline.py  joint_SLDS.py  joint_SLDS_simple.py  result_compilers.py  same_speed_SLDS.py  same_speed_SLDS_causal.py  same_speed_SLDS_simple.py  statistical_tests_algorithmic.py  statistics_paper.py  vis_config.py  vis_paper.py  vis_paper_metrics.py
dynamical_systems_analyses/utils/: convert_trial_ids.py  generate_session_statistics.py  statistical_tests.py  utils_decoding.py  utils_dsup.py  utils_inference.py  (+2 more)
experiments/: SLDS.py  cross_speed_SLDS.py  cross_speed_SLDS_simple.py  cross_speed_SLDS_test.py  joint_SLDS.py  joint_SLDS_simple.py  same_speed_SLDS.py  same_speed_SLDS_simple.py
metrics/: decoding_SLDS.py  decoding_baselines.py  dsup_ratio_SLDS.py  entropy_SLDS.py  inference_SLDS.py  inference_baseline.py
scripts/: MASTER_autorestart.py  config.py  figure_generation_MASTER.py  statistical_tests_algorithmic.py  statistics_paper.py
utils/: convert_trial_ids.py  generate_session_statistics.py  statistical_tests.py  utils_decoding.py  utils_dsup.py  utils_inference.py  utils_processing.py  utils_vis.py
visualizations/: vis_config.py  vis_paper.py  vis_paper_metrics.py
